fixed spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,9 +6,7 @@ html {
 body {
     font-family: "Times New Roman", serif;
     font-size: 16pt;
-    width: 95%;
     line-height: 1.4em;
-    padding: 0 1em 1em 1em;
     margin-top: 5%;
     margin-bottom: 5%;
     margin: auto;
@@ -39,6 +37,7 @@ nav ol {
 }
 #navbar{
     border:2px solid;
+    margin-left: 1em;
 }
 #navbar ol li {
     display: block;
@@ -81,8 +80,6 @@ h1 {
     text-align: left;
     background: linear-gradient(to bottom, #b92b27 , #eee);
     margin-bottom:10px;
-    margin-left:-3%;
-    margin-right:-3%;
 }
 h2{
     text-align: center;
